--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,15 +5,13 @@
 
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
-
-  display: grid;
   grid-template-rows: 20px 1fr 20px;
   align-items: center;
-  justify-items: center;
   min-height: 100svh;
   padding: 80px;
   gap: 64px;
   font-family: var(--font-geist-sans);
+  width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,23 +57,6 @@
 .ctas {
   display: flex;
   gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition: background 0.2s, color 0.2s, border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
 }
 
 a.primary {
