--- a/app/globals.css
+++ b/app/globals.css
@@ -9,10 +9,32 @@
 .zip-code {
     border-radius: 4px;
 }
-.footer{
+.footer {
     display: flex;
     width: 100%;
     padding: 16px 24px 24px 24px;
     justify-content: space-between;
     align-items: center;
+}
+
+.map-controls {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.map-controls > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+}
+.map-controls label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0.5rem;
 }
