add car selection option

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@
     font-weight: 600;
     line-height: 120%;
 }
+.lookup-background {
+    background-image: url("");
+}
 .zip-code {
     border-radius: 4px;
 }
